2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpviewrendererpalette.[ch]: new view renderer,
	does nothing yet except chaining up in ::render().

	* app/widgets/gimpviewrenderer-utils.c
	(gimp_view_renderer_type_by_viewable_type): use it for palettes.

2005-07-13  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-grid.c
	* plug-ins/gfig/gfig.h: applied a patch by Ted Shaneyfelt that
	addresses parts of bug 151092: less sectors on inner, more sectors
	on outer tracks. 

2005-07-13  Sven Neumann  <sven@gimp.org>

	* app/base/Makefile.am
	* app/base/segmentator.[ch]: renamed to siox.[ch].

	* app/base/siox.[ch]: added API docs and a link to the algorithm's
	new homepage. Removed unused code.

	* app/core/gimpdrawable-foreground-extract.c: changed accordingly.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette.c (gimp_palette_add_entry): actually return
	the added entry, and not always the palette's last entry (argh!).

	* app/widgets/gimppaletteeditor.c: make sure the cursor is always
	on the newly added color. Really fixes #15060 this time.

2005-07-13  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.[ch]: added smooth_region(), a
	simple convolution filter to smooth a mask.

	* app/base/segmentator.c (smooth_mask): use the new function.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockable.[ch]: added new public function
	gimp_dockable_blink_cancel() which stops title blinking.

	* app/tools/gimpcolorpickertool.c (gimp_color_picker_tool_picked):
	cancel blinking when updating a picked color so the dockable
	doesn't flicker for each cursor movement.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteeditor.c (gimp_palette_editor_pick_color):
	add colors after the cursor. Fixes bug #150608.

2005-07-13  Michael Natterer  <mitch@gimp.org>
